--- a/src/App.css
+++ b/src/App.css
@@ -1,38 +1,19 @@
 .App {
-  text-align: center;
-}
-
-.App-logo {
-  height: 40vmin;
-  pointer-events: none;
-}
-
-@media (prefers-reduced-motion: no-preference) {
-  .App-logo {
-    animation: App-logo-spin infinite 20s linear;
-  }
-}
-
-.App-header {
-  background-color: #282c34;
   min-height: 100vh;
-  display: flex;
-  flex-direction: column;
-  align-items: center;
-  justify-content: center;
-  font-size: calc(10px + 2vmin);
-  color: white;
+  /* background-color: lightseagreen; */
+  background-color: #4441;
+  display: grid;
+  grid-template: .072fr 1fr / 1fr;
+  row-gap: 50px;
 }
-
-.App-link {
-  color: #61dafb;
-}
-
-@keyframes App-logo-spin {
-  from {
-    transform: rotate(0deg);
+  .App-header {
+    border-bottom: 1px solid #4444;
+    background-color: #ffbb84;
+    font-size: 45px;
+    text-align: center;
   }
-  to {
-    transform: rotate(360deg);
+  .App-main {
+    width: 80%;
+    justify-self: center;
+    background-color: #fff;
   }
-}
